{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 490,
  "lineage": "1d8f4e50-ecbb-797a-f922-2c5be3a1d78f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0804217fb725df330",
            "arn": "arn:aws:ec2:us-east-1:331107561604:elastic-ip/eipalloc-0804217fb725df330",
            "domain": "vpc",
            "id": "eipalloc-0804217fb725df330",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-235-232-43.compute-1.amazonaws.com",
            "public_ip": "18.235.232.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "togglemaster-nat-eip"
            },
            "tags_all": {
              "Name": "togglemaster-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331107561604:internet-gateway/igw-01da32f96693851f3",
            "id": "igw-01da32f96693851f3",
            "owner_id": "331107561604",
            "tags": {
              "Name": "togglemaster-igw"
            },
            "tags_all": {
              "Name": "togglemaster-igw"
            },
            "vpc_id": "vpc-004cc973cf22f6c0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0804217fb725df330",
            "association_id": "eipassoc-0d02d377c525b884d",
            "connectivity_type": "public",
            "id": "nat-0ba26ffecbcc96984",
            "network_interface_id": "eni-0c91209df4f0a4215",
            "private_ip": "10.0.1.64",
            "public_ip": "18.235.232.43",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aaf2cf07c4c621e8",
            "tags": {
              "Name": "togglemaster-nat"
            },
            "tags_all": {
              "Name": "togglemaster-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331107561604:route-table/rtb-0ab81dcaacccba035",
            "id": "rtb-0ab81dcaacccba035",
            "owner_id": "331107561604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ba26ffecbcc96984",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "togglemaster-private-rt"
            },
            "tags_all": {
              "Name": "togglemaster-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-004cc973cf22f6c0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331107561604:route-table/rtb-055fdf3adf1f72f05",
            "id": "rtb-055fdf3adf1f72f05",
            "owner_id": "331107561604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01da32f96693851f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "togglemaster-public-rt"
            },
            "tags_all": {
              "Name": "togglemaster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-004cc973cf22f6c0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cf1b2b951fab1cd",
            "route_table_id": "rtb-0ab81dcaacccba035",
            "subnet_id": "subnet-03bb9c9e39b8a4b30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02046cb6363c91e95",
            "route_table_id": "rtb-0ab81dcaacccba035",
            "subnet_id": "subnet-0c463c8e10d072984"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039f4b1a19bd9bef7",
            "route_table_id": "rtb-055fdf3adf1f72f05",
            "subnet_id": "subnet-0aaf2cf07c4c621e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d65cfb43ef51d53",
            "route_table_id": "rtb-055fdf3adf1f72f05",
            "subnet_id": "subnet-0191639fd0c276f0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331107561604:security-group/sg-04f9b531e20b7cbd7",
            "description": "Security Group dos nodes EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f9b531e20b7cbd7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "togglemaster-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "331107561604",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "togglemaster-eks-nodes-sg"
            },
            "tags_all": {
              "Name": "togglemaster-eks-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-004cc973cf22f6c0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331107561604:security-group/sg-089395b5e97d4553e",
            "description": "PostgreSQL acessivel pelos nodes EKS e recursos da VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089395b5e97d4553e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "VPC geral",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Nodes EKS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04f9b531e20b7cbd7"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "togglemaster-rds-sg",
            "name_prefix": "",
            "owner_id": "331107561604",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "togglemaster-rds-sg"
            },
            "tags_all": {
              "Name": "togglemaster-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-004cc973cf22f6c0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331107561604:security-group/sg-0574bec959becc281",
            "description": "Redis acessivel pelos nodes EKS e recursos da VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0574bec959becc281",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "VPC geral",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "Nodes EKS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04f9b531e20b7cbd7"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "togglemaster-redis-sg",
            "name_prefix": "",
            "owner_id": "331107561604",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "togglemaster-redis-sg"
            },
            "tags_all": {
              "Name": "togglemaster-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-004cc973cf22f6c0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331107561604:subnet/subnet-03bb9c9e39b8a4b30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bb9c9e39b8a4b30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331107561604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "togglemaster-private-a",
              "kubernetes.io/cluster/togglemaster-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "togglemaster-private-a",
              "kubernetes.io/cluster/togglemaster-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-004cc973cf22f6c0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331107561604:subnet/subnet-0c463c8e10d072984",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c463c8e10d072984",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331107561604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "togglemaster-private-b",
              "kubernetes.io/cluster/togglemaster-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "togglemaster-private-b",
              "kubernetes.io/cluster/togglemaster-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-004cc973cf22f6c0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331107561604:subnet/subnet-0aaf2cf07c4c621e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaf2cf07c4c621e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331107561604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "togglemaster-public-a",
              "kubernetes.io/cluster/togglemaster-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "togglemaster-public-a",
              "kubernetes.io/cluster/togglemaster-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-004cc973cf22f6c0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331107561604:subnet/subnet-0191639fd0c276f0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0191639fd0c276f0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331107561604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "togglemaster-public-b",
              "kubernetes.io/cluster/togglemaster-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "togglemaster-public-b",
              "kubernetes.io/cluster/togglemaster-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-004cc973cf22f6c0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331107561604:vpc/vpc-004cc973cf22f6c0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e0e16e9c16b8e03",
            "default_route_table_id": "rtb-042f1659e00a8b013",
            "default_security_group_id": "sg-08f9de0d70661c833",
            "dhcp_options_id": "dopt-07d053817e2bae777",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004cc973cf22f6c0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042f1659e00a8b013",
            "owner_id": "331107561604",
            "tags": {
              "Name": "togglemaster-vpc"
            },
            "tags_all": {
              "Name": "togglemaster-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}